translation-tool/inputs/source_meta/objects/Brazil_LOLSiteReasonCode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Subtype__c</fullName>
        <label>Order Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Reason_Code__c</fullName>
        <label>Site Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brazil_LOLSiteReasonCode</label>
</CustomObject>